fixed search for leth items and item img overlap over border

--- a/src/app/core/item-selector/item-selector.component.css
+++ b/src/app/core/item-selector/item-selector.component.css
@@ -10,7 +10,7 @@ div.item-block {
 ul.item-grid {
 	padding-inline-start: 20px;
 }
-img.item-img {
+.item-img {
 	width:44px;
 	height:44px;
 	cursor:pointer;
